# python-homey

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  main.py  pyproject.toml
examples/: basic_usage.py  device_control.py  flow_management.py  realtime_events.py  websocket_example.py
src/homey/: __init__.py  auth.py  client.py  exceptions.py
src/homey/managers/: __init__.py  apps.py  base.py  devices.py  flows.py  system.py  zones.py
src/homey/models/: __init__.py  app.py  base.py  device.py  flow.py  system.py  zone.py
tests/: __init__.py  conftest.py  test_client.py  test_system_manager.py
